--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Testing Dolls</title>
     <script defer src="main.dart" type="application/dart"></script>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <script src="../packages/browser/dart.js"></script>
 </head>
